--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kumulos/web",
-    "version": "1.5.1",
+    "version": "1.5.2",
     "description": "Official SDK for integrating Kumulos services with your web projects",
     "main": "dist/index.js",
     "types": "types/src/index.d.ts",
@@ -29,10 +29,10 @@
         "prettier": "^1.19.1",
         "sass-loader": "^8.0.0",
         "style-loader": "^1.0.2",
+        "terser": "^5.2.1",
+        "terser-webpack-plugin": "^4.1.0",
         "ts-loader": "^6.2.0",
         "typescript": "^3.9.2",
-        "uglify-es": "^3.3.9",
-        "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     },
