--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kumulos/web",
-    "version": "1.11.0",
+    "version": "1.11.1",
     "description": "Official SDK for integrating Kumulos services with your web projects",
     "main": "dist/index.js",
     "types": "types/src/index.d.ts",
@@ -24,16 +24,16 @@
     "author": "Kumulos Ltd. <support@kumulos.com>",
     "license": "MIT",
     "devDependencies": {
-        "@types/jest": "^26.0.14",
+        "@types/jest": "^27.0.3",
         "css-loader": "^6.2.0",
-        "jest": "^26.4.2",
-        "node-sass": "^6.0.1",
+        "jest": "^27.3.1",
         "prettier": "^1.19.1",
-        "sass-loader": "^12.1.0",
+        "sass": "^1.43.5",
+        "sass-loader": "^12.3.0",
         "style-loader": "^3.2.1",
         "terser": "^5.7.2",
         "terser-webpack-plugin": "^5.1.4",
-        "ts-jest": "^26.4.0",
+        "ts-jest": "^27.0.7",
         "ts-loader": "^9.2.5",
         "typescript": "^4.4.2",
         "webpack": "^5.51.1",
